# Turtlifier

./: .gitignore  Authors.md  README.md  config.ini  installation-script
results/: test1.ttl  test2.ttl  test3.ttl  test4.ttl
tests/: test1.csv  test2.csv  test3.csv  test4.csv
turtl-front/turtl-front/: package-lock.json  package.json
turtl-front/turtl-front/src/: App.js  (+4 more)
turtlifier/: README.md  buildExecutable.sh  config.ini  pyproject.toml  server.spec
turtlifier/front/: index.html
turtlifier/static/: asset-manifest.json  precache-manifest.675fab504ff0174778132bb9bd9f5b32.js  service-worker.js
turtlifier/static/css/: main.e48b3ccb.chunk.css  main.fa87fd86.chunk.css  main.fa87fd86.chunk.css.map
turtlifier/static/js/: 2.002438af.chunk.js  2.002438af.chunk.js.map  2.e9528b05.chunk.js  2.e9528b05.chunk.js.map  3.44b233a2.chunk.js  3.44b233a2.chunk.js.map  3.c16f9c08.chunk.js  3.c16f9c08.chunk.js.map  main.6d003712.chunk.js  main.6d003712.chunk.js.map  main.bda4ffeb.chunk.js  main.bda4ffeb.chunk.js.map  runtime-main.1ea01b7f.js  runtime-main.1ea01b7f.js.map  runtime-main.c1ba3986.js  runtime-main.c1ba3986.js.map
turtlifier/tests/: test_turtlifier.py
turtlifier/turtlifier/: config.py  converter.py  file_utils.py  server.py
turtlifier/turtlifier/front/: index.html
turtlifier/turtlifier/static/css/: main.e48b3ccb.chunk.css.map
turtlifier/turtlifier/static/js/: 2.aed68aae.chunk.js  2.aed68aae.chunk.js.map  3.c8909403.chunk.js  3.c8909403.chunk.js.map  main.be92d768.chunk.js  main.be92d768.chunk.js.map  runtime-main.c2575d80.js  runtime-main.c2575d80.js.map
(+6 files in other folders)
