[tool.poetry]
name = "turtlifier"
version = "0.1.0"
description = ""
authors = ["mauduran <is716122@iteso.mx>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
Jinja2 = "^3.0.2"
python-multipart = "^0.0.5"
rdflib = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "turtlifier.server:start"
config = "turtlifier.config:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
